--- a/index.html
+++ b/index.html
@@ -35,8 +35,46 @@
       </nav>
       <!-- Navigation bar end -->
 
-      <!-- top-banner -->
-      
+      <!-- Slider start-->
+      <div id="carouselExampleDark" class="carousel carousel-dark slide my-4" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="1000">
+            <img src="images/cover/cover-1.png" class="d-block  rounded w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h1 class="text-light">Get Started Digital <br> Learning</h1>
+              <p class="text-light">It is a long established fact that a reader <br> will be distracted by the readable content of a page when looking at its layout.</p>
+              <button class="btn btn-success px-3">Get Started</button>
+
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="images/cover/cover-2.png" class="d-block rounded  w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h1>Get Started Digital <br> Learning</h1>
+              <p>It is a long established fact that a reader <br> will be distracted by the readable content of a page when looking at its layout..</p>
+              <button class="btn btn-success px-3">Get Started</button>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/cover/cover-3.png" class="d-block rounded  w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h1>Get Started Digital <br> Learning</h1>
+              <p>It is a long established fact that a reader <br> will be distracted by the readable content of a page when looking at its layout.</p>
+              <button class="btn btn-success px-3">Get Started</button>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <!-- Slider End -->
+
 
     </header>
   
