--- a/index.html
+++ b/index.html
@@ -77,6 +77,123 @@
 
 
     </header>
+
+    <main class="container">
+      <!-- courses section start -->
+      <section>
+         <div class="text-center my-5">
+          <h1>Discover Our Popular Courses</h1>
+          <p>Discover Our Popular Courses</p>
+        </div>
+        
+        <div class="container">
+          <div class="row g-4">
+            <div class="col-lg-6 col-md-12">
+              <div class="card   ">
+                <div class="row g-0 ">
+                  <div class="col-md-4  ">
+                    <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body align-items-center ">
+                      <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                      <p class="card-text">Learn the fundamental & become a UI/UX Designer</p>
+                      <p class="card-text text-primary fw-semibold">Price : 30$</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <div class="card  ">
+                <div class="row g-0">
+                  <div class="col-md-4 ">
+                    <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body align-items-center">
+                      <h5 class="card-title">Javascript Basic to advanced</h5>
+                      <p class="card-text">You can learn Javascript from basic to advanced properly</p>
+                      <p class="card-text text-primary fw-semibold">Price : 35$</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <div class="card   ">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body align-items-center">
+                      <h5 class="card-title">Fullstack Web Development </h5>
+                      <p class="card-text">Learn fullstack web development & become a Web Developer</p>
+                      <p class="card-text text-primary fw-semibold">Price : 40$</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <div class="card   ">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body align-items-center">
+                      <h5 class="card-title">Digital Marketing</h5>
+                      <p class="card-text">Learn digital marketing & earn money easyli</p>
+                      <p class="card-text text-primary fw-semibold">Price : 20$</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <div class="card   ">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body align-items-center">
+                      <h5 class="card-title">Photography Basic Rules</h5>
+                      <p class="card-text">Learn the basics & start photography</p>
+                      <p class="card-text text-primary fw-semibold">Price : 15$</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+              <div class="card   ">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body align-items-center">
+                      <h5 class="card-title">Motion Graphics</h5>
+                      <p class="card-text">Learn motion graphics & become a motion graphics designer</p>
+                      <p class="card-text text-primary fw-semibold">Price : 20$</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center my-5">
+          <p class="btn btn-success px-4">See More Courses</p>
+        </div>
+
+      </section>
+      <!-- courses section end -->
+    </main>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
