--- a/index.html
+++ b/index.html
@@ -193,6 +193,90 @@
 
       </section>
       <!-- courses section end -->
+
+      <!-- explore section [optional] -->
+
+      <!-- explore section [optional] -->
+
+      <!-- ready to join[bonus section] -->
+      <div class="bg-success rounded text-light p-5 d-flex justify-content-between">
+        <div>
+          <h1>Ready to join?</h1>
+        <p>As first as you join us , you will get our all services. <br> By improving your knowledge & skills you will get success.</p>
+        </div>
+
+        <span class="btn btn-light "> Register Now</span>
+      </div>
+
+      <!-- ready to join[bonus section] -->
+
+        <!-- meet section  [optional]-->
+
+        <!-- meet section  [optional]-->
+
+        <!-- feedback -->
+
+        <!-- feedback -->
+
+        <!-- frequently Asked Q.  -->
+        <section class="m-5 ">    
+          <div class="text-center">
+            <h1>Frequently Asked Questions</h1>
+            <p class="my-3">Many people asked these questions. You can find the answere here .</p>
+          </div>    
+          
+          <div class="accordion " id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                What is the difference between flexbox & grid?
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox can work on either row or columns at a time, but Grids can work on both. Flexbox, gives you more flexibility while working on either element (row or column).
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                What is the difference between bootstrap & tailwind?
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness. Sites created using Bootstrap follow the generic pattern that makes them look identical.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                What is CSS box model?
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                In CSS, the term "box model" is used when talking about design and layout. The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFour">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                What is Semantic tag?
+              </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Semantic HTML tags are those that clearly describe their meaning in a human- and machine-readable way. Elements such as header , footer , main and article are all considered semantic because they accurately describe the purpose of the element and the type of content that is inside them.
+              </div>
+            </div>
+          </div>
+        </div></section>
+
+        <!-- frequently Asked Q.  -->
     </main>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
