--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <!-- feedback -->
 
         <!-- frequently Asked Q.  -->
-        <section class="m-5 ">    
+        <section class="m-5">    
           <div class="text-center">
             <h1>Frequently Asked Questions</h1>
             <p class="my-3">Many people asked these questions. You can find the answere here .</p>
@@ -277,6 +277,25 @@
         </div></section>
 
         <!-- frequently Asked Q.  -->
+
+        <!-- trust section [bonus]-->
+        <section class="d-lg-none my-5">
+          <div class="text-center">
+            <h1>Trusted by over 800+ companie</h1>
+          </div>
+          <div class="d-flex justify-content-around mt-4">
+            <img src="images/company/company-2.png" alt="">
+            <img src="images/company/company-4.png" alt="">
+            <img src="images/company/company-3.png" alt="">
+            <img src="images/company/company-1.png" alt="">
+            <img src="images/company/company-5.png" alt="">
+            <img src="images/company/company-6.png" alt="">
+          </div>
+        </section>
+
+
+
+        <!-- trust section -->
     </main>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
