--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MRJ Tech</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/0846e2b0ab.js" crossorigin="anonymous"></script> 
   </head>
   <body>
     <header class="container my-4">
@@ -14,7 +15,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">Home</a>
@@ -36,39 +37,38 @@
       <!-- Navigation bar end -->
 
       <!-- Slider start-->
-      <div id="carouselExampleDark" class="carousel carousel-dark slide my-4" data-bs-ride="carousel">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="1000">
-            <img src="images/cover/cover-1.png" class="d-block  rounded w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h1 class="text-light">Get Started Digital <br> Learning</h1>
-              <p class="text-light">It is a long established fact that a reader <br> will be distracted by the readable content of a page when looking at its layout.</p>
-              <button class="btn btn-success px-3">Get Started</button>
-
+          <div class="carousel-item  active " data-bs-interval="2000">
+            <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
+              <h1>Get Started Digital <br> Learning</h1>
+              <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+              <span class="btn btn-success px-3">Get Started</span>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="images/cover/cover-2.png" class="d-block rounded  w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
               <h1>Get Started Digital <br> Learning</h1>
-              <p>It is a long established fact that a reader <br> will be distracted by the readable content of a page when looking at its layout..</p>
-              <button class="btn btn-success px-3">Get Started</button>
+              <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout..</p>
+              <span class="btn btn-success px-3">Get Started</span>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="images/cover/cover-3.png" class="d-block rounded  w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption">
               <h1>Get Started Digital <br> Learning</h1>
-              <p>It is a long established fact that a reader <br> will be distracted by the readable content of a page when looking at its layout.</p>
-              <button class="btn btn-success px-3">Get Started</button>
+              <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+              <span class="btn btn-success px-3">Get Started</span>
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
@@ -91,7 +91,7 @@
             <div class="col-lg-6 col-md-12">
               <div class="card   ">
                 <div class="row g-0 ">
-                  <div class="col-md-4  ">
+                  <div class="col-md-4 ">
                     <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
@@ -194,29 +194,43 @@
       </section>
       <!-- courses section end -->
 
-      <!-- explore section [optional] -->
-
-      <!-- explore section [optional] -->
 
       <!-- ready to join[bonus section] -->
-      <div class="bg-success rounded text-light p-5 d-flex justify-content-between">
-        <div>
-          <h1>Ready to join?</h1>
-        <p>As first as you join us , you will get our all services. <br> By improving your knowledge & skills you will get success.</p>
+        <div class="container bg-success rounded text-light p-5 ">
+          <div class="row">
+            <div class="col-lg-10 col-md-12 col-sm-12">
+              <h1>Ready to join?</h1>
+              <p>As first as you join us , you will get our all services. <br> By improving your knowledge & skills you will get success.</p>
+            </div> 
+            <div class="col-lg-2 col-md-12 col-sm-12 ">
+              <button type="button" class="btn btn-light px-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  Register Now
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      asdfasdfasdfasdfas
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+
+            </div>
+          </div>
         </div>
-
-        <span class="btn btn-light "> Register Now</span>
-      </div>
-
-      <!-- ready to join[bonus section] -->
-
-        <!-- meet section  [optional]-->
-
-        <!-- meet section  [optional]-->
-
-        <!-- feedback -->
-
-        <!-- feedback -->
+      <!-- ready to join End[bonus section] -->
 
         <!-- frequently Asked Q.  -->
         <section class="m-5">    
@@ -279,7 +293,7 @@
         <!-- frequently Asked Q.  -->
 
         <!-- trust section [bonus]-->
-        <section class="d-lg-none my-5">
+        <section class="sm-none d-none d-lg-block my-5">
           <div class="text-center">
             <h1>Trusted by over 800+ companie</h1>
           </div>
@@ -292,11 +306,24 @@
             <img src="images/company/company-6.png" alt="">
           </div>
         </section>
-
-
-
         <!-- trust section -->
     </main>
+
+    <footer class="mt-5 p-4 bg-dark text-center text-light">
+        <h2>
+            MRJ Edu
+        </h2>
+        <p>
+            Office 41, Zawaya Buildin, Ghala Muscat, <br>
+            Sultanate of Oman <br>
+            Privacy Ploicy | Terms of use <br>
+        </p>
+        <h3 class="p-3">
+            <a target="_blank"  href="https://www.facebook.com/facebookapp"><i class="m-1 fa-brands fa-square-facebook"></i></a> 
+            <a target="_blank" href="https://twitter.com/?lang=en"><i class="m-1 fa-brands fa-square-twitter"></i></a> 
+            <a target="_blank" href="https://www.linkedin.com/company/linkedin/"><i class="m-1 fa-brands fa-linkedin"></i></a>  
+        </h3>
+    </footer>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
